# lead-routing-lint

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/lead_routing_lint/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_lead_routing_lint.py
